packages/dart_edge_native_bridge/lib/src/ffi/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

final class NativeByteStream extends ffi.Struct {
  @ffi.Uint32()
  external int abi_version;

  @ffi.Size()
  external int struct_size;

  external ffi.Pointer<ffi.Void> context;

  external NativeByteStreamNext next;

  external NativeByteStreamCancel cancel;

  external NativeByteStreamFreeRead free_read;

  external NativeByteStreamRelease release;
}

typedef NativeByteStreamCancel =
    ffi.Pointer<
      ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> context)>
    >;
typedef NativeByteStreamFreeRead =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(ffi.Pointer<NativeByteStreamRead> value)
      >
    >;
typedef NativeByteStreamNext =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Pointer<NativeByteStreamRead> Function(
          ffi.Pointer<ffi.Void> context,
        )
      >
    >;

final class NativeByteStreamRead extends ffi.Struct {
  @ffi.Int32()
  external int status;

  external NativeOwnedBytes bytes;

  external NativeBytes error;
}

typedef NativeByteStreamRelease =
    ffi.Pointer<
      ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> context)>
    >;

final class NativeBytes extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.IntPtr()
  external int len;
}

final class NativeOwnedBytes extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.IntPtr()
  external int len;
}

final class NativePair extends ffi.Struct {
  external NativeBytes key;

  external NativeBytes value;
}

final class NativeResult extends ffi.Struct {
  @ffi.Int32()
  external int status;

  external NativeBytes code;

  external NativeBytes message;
}

final class NativeString extends ffi.Struct {
  external NativeBytes bytes;
}
